# Turblyze

./: .cursorignore  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  defaultCase  defaultSetup  inputSettings
docs/: CASE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  SETUP.md  STYLE.md
include/Application/: CFDApplication.h  CFDApplication.hpp
include/BoundaryConditions/: BoundaryConditions.h  BoundaryConditions.hpp  BoundaryData.h  BoundaryData.hpp  BoundaryPatch.h  BoundaryPatch.hpp
include/Case/: CaseReader.hpp
include/Core/: Scalar.h  Vector.h  flowRate.h  linearInterpolation.h  massFlowRate.h
include/ErrorHandling/: ErrorHandler.hpp
include/Mesh/: Cell.h  Cell.hpp  CellData.h  CellData.hpp  Face.h  Face.hpp  FaceData.h  FaceData.hpp  Mesh.hpp  MeshChecker.hpp  MeshReader.h  MeshReader.hpp  OptionalRef.h  OptionalRef.hpp  Scalar.h  Scalar.hpp  Tensor.h  Tensor.hpp  Vector.hpp  checkMesh.h  checkMesh.hpp
include/Models/: KOmegaSST.h  KOmegaSST.hpp  kOmegaSST.hpp
include/Numerics/: Constraint.h  Constraint.hpp  ConvectionScheme.h  ConvectionScheme.hpp  ConvectionSchemes.hpp  GradientScheme.h  GradientScheme.hpp  LinearInterpolation.h  LinearInterpolation.hpp  LinearSolvers.h  LinearSolvers.hpp  Matrix.h  Matrix.hpp  SIMPLE.h  SIMPLE.hpp  TransportEquation.h  TransportEquation.hpp  flowRate.hpp  linearInterpolation.hpp
include/PostProcessing/: VtkWriter.h  VtkWriter.hpp
include/Settings/: DictionaryReader.hpp
include/Setup/: SetupReader.hpp
input_files/: cylinder_coarse.msh
outputFiles/: cylinder_flow.vtp  cylinder_flow.vtu  cylinder_flow_serial.vtp
src/: main.cpp
src/Application/: CFDApplication.cpp  CFDApplication.h  SolverSetup.cpp  SolverSetup.h
src/BoundaryConditions/: BoundaryConditions.cpp  BoundaryConditions.h  BoundaryConditionsLoader.cpp  BoundaryConditionsLoader.h  BoundaryData.cpp  BoundaryData.h  BoundaryPatch.cpp  BoundaryPatch.h
src/Case/: CaseConfiguration.cpp  CaseConfiguration.h  CaseReader.cpp  CaseReader.h  RuntimeSelection.cpp  RuntimeSelection.h
src/Fields/: CellData.cpp  CellData.h  FaceData.cpp  FaceData.h  Field.cpp  Field.h
src/LinearSystem/: LinearSolvers.cpp  LinearSolvers.h  Matrix.cpp  Matrix.h  TransportEquation.h
src/Mesh/: BoundaryPatch.h  Cell.cpp  Cell.h  CellData.cpp  CellData.h  Face.cpp  Face.h  FaceData.cpp  FaceData.h  Mesh.cpp  Mesh.h  MeshChecker.cpp  MeshChecker.h  MeshContainers.h  MeshCreator.cpp  MeshCreator.h  MeshReader.cpp  MeshReader.h  Scalar.h  Tensor.cpp  Vector.cpp  Vector.h  checkMesh.cpp
src/Models/: KOmegaSST.cpp  KOmegaSST.h  kOmegaSST.cpp  kOmegaSST.h
src/Models/Turbulence/: Laminar.h  RANS.cpp  RANS.h  TurbulenceModel.cpp  TurbulenceModel.h  kOmegaSST.cpp  kOmegaSST.h
src/Numerics/: Constraint.cpp  ConvectionScheme.cpp  ConvectionScheme.h  ConvectionSchemes.cpp  GradientScheme.cpp  GradientScheme.h  LinearInterpolation.cpp  LinearSolvers.cpp  Matrix.cpp  Matrix.h  SIMPLE.cpp  SIMPLE.h  flowRate.cpp  linearInterpolation.cpp  linearInterpolation.h  massFlowRate.cpp  massFlowRate.h
src/PostProcessing/: DerivedFields.cpp  DerivedFields.h  Forces.cpp  Forces.h  PostProcess.cpp  PostProcess.h  PvdTimeSeries.cpp  PvdTimeSeries.h  VtkBoundaryWriter.cpp  VtkBoundaryWriter.h  VtkCellOrdering.cpp  VtkCellOrdering.h  VtkWriter.cpp  VtkWriter.h
src/PostProcessing/VTK/: PvdTimeSeries.cpp  PvdTimeSeries.h  VtkBoundaryWriter.cpp  VtkBoundaryWriter.h  VtkCellOrdering.h  VtkWriter.cpp  VtkWriter.h
src/Primitives/: ErrorHandler.h  Integer.h  Logger.cpp  Logger.h  OptionalRef.h  Scalar.h  StringTypes.h  Tensor.cpp  Tensor.h  Vector.cpp  Vector.h
src/Schemes/: ConvectionScheme.h  ConvectionSchemes.cpp  ConvectionSchemes.h  GradientScheme.cpp  GradientScheme.h  LinearInterpolation.h
src/Schemes/ConvectionSchemes/: CentralDifferenceScheme.cpp  CentralDifferenceScheme.h  ConvectionSchemes.cpp  ConvectionSchemes.h  SecondOrderUpwindScheme.cpp  SecondOrderUpwindScheme.h  UpwindScheme.cpp  UpwindScheme.h
src/Schemes/GradientSchemes/: GradientScheme.cpp  GradientScheme.h  LeastSquares.cpp  LeastSquares.h
src/Schemes/Interpolation/: LinearInterpolation.h
src/Settings/: DictionaryReader.cpp
src/Setup/: SetupReader.cpp
src/Solver/: Constraint.cpp  Constraint.h  SIMPLE.cpp  SIMPLE.h
validation/: README.md  runGuide.md
validation/reference/: morrison2013.py  sources.md
validation/results/: laminarCasesResults.csv  turbulentCasesResults.csv
validation/scripts/: plotDragCurve.py  validationData.py
validation/turblyze/: sphereLaminarCase  sphereSSTCase
verification/: README.md  runGuide.md
verification/openFoam/0/: U  k  nut  omega  p
verification/openFoam/constant/: momentumTransport  physicalProperties
verification/openFoam/system/: controlDict  fvSchemes  fvSolution
verification/results/: openFoamSummary.csv  sphereForcesHistory.csv  turblyzeForcesFull.txt
verification/scripts/: forcesStats.py
verification/turblyze/: sphereSSTCase
